test/files/type-resolver/errors/invalid-input.otest
name = "Invalid input"
line = 2
character = 6
error = 'Invalid input name "squiggle" for function "sine".'

---

sine(squiggle: 0)
